--- a/environment.yml
+++ b/environment.yml
@@ -1,55 +1,23 @@
 name: shine
 channels:
   - defaults
+  - nvidia
+  - pytorch
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - blas=1.0=mkl
-  - ca-certificates=2023.08.22=h06a4308_0
-  - cffi=1.15.1=py38h5eee18b_3
-  - gmp=6.2.1=h295c915_3
-  - gmpy2=2.1.2=py38heeb90bb_0
-  - intel-openmp=2023.1.0=hdb19cb5_46305
-  - jinja2=3.1.2=py38h06a4308_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libpng=1.6.39=h5eee18b_0
-  - libprotobuf=3.20.3=he621ea3_0
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - mkl=2023.1.0=h213fc3f_46343
-  - mkl-service=2.4.0=py38h5eee18b_1
-  - mkl_fft=1.3.8=py38h5eee18b_0
-  - mkl_random=1.2.4=py38hdb19cb5_0
-  - mpc=1.1.0=h10f8cd9_1
-  - mpfr=4.0.2=hb69a4c5_1
-  - mpmath=1.3.0=py38h06a4308_0
-  - ncurses=6.4=h6a678d5_0
-  - networkx=3.1=py38h06a4308_0
-  - ninja=1.10.2=h06a4308_5
-  - ninja-base=1.10.2=hd09550d_5
-  - numpy-base=1.24.3=py38h060ed82_1
-  - openssl=3.0.11=h7f8727e_2
-  - packaging=23.1=py38h06a4308_0
-  - pip=23.2.1=py38h06a4308_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - python=3.8.18=h955ad1f_0
-  - readline=8.2=h5eee18b_0
-  - setuptools=68.0.0=py38h06a4308_0
-  - sqlite=3.41.2=h5eee18b_0
-  - tbb=2021.8.0=hdb19cb5_0
-  - tk=8.6.12=h1ccaba5_0
-  - torchmetrics=0.11.4=py38h2f386ee_1
-  - wheel=0.41.2=py38h06a4308_0
-  - xz=5.4.2=h5eee18b_0
-  - zlib=1.2.13=h5eee18b_0
+  - python=3.8
+  - cudatoolkit=11.8
+  - pytorch
+  - torchvision
+  - pytorch-cuda=11.8
+  - torchmetrics
+  - pip
   - pip:
       - absl-py==2.0.0
       - annotated-types==0.7.0
       - asttokens==2.4.1
       - astunparse==1.6.3
       - backcall==0.2.0
+      - build==1.2.2.post1
       - cachetools==5.3.2
       - certifi==2023.7.22
       - charset-normalizer==3.2.0
@@ -80,43 +48,22 @@ dependencies:
       - joblib==1.3.2
       - keras==2.13.1
       - libclang==16.0.6
-      - lion-pytorch==0.1.2
       - lit==17.0.1
       - markdown==3.5.1
-      - markupsafe==2.1.3
       - matplotlib-inline==0.1.6
       - numpy==1.24.4
-      - nvidia-cublas-cu11==11.10.3.66
-      - nvidia-cublas-cu12==12.1.3.1
-      - nvidia-cuda-cupti-cu11==11.7.101
-      - nvidia-cuda-cupti-cu12==12.1.105
-      - nvidia-cuda-nvrtc-cu11==11.7.99
-      - nvidia-cuda-nvrtc-cu12==12.1.105
-      - nvidia-cuda-runtime-cu11==11.7.99
-      - nvidia-cuda-runtime-cu12==12.1.105
-      - nvidia-cudnn-cu11==8.5.0.96
-      - nvidia-cudnn-cu12==9.1.0.70
-      - nvidia-cufft-cu11==10.9.0.58
-      - nvidia-cufft-cu12==11.0.2.54
-      - nvidia-curand-cu11==10.2.10.91
-      - nvidia-curand-cu12==10.3.2.106
-      - nvidia-cusolver-cu11==11.4.0.1
-      - nvidia-cusolver-cu12==11.4.5.107
-      - nvidia-cusparse-cu11==11.7.4.91
-      - nvidia-cusparse-cu12==12.1.0.106
-      - nvidia-nccl-cu11==2.14.3
-      - nvidia-nccl-cu12==2.20.5
-      - nvidia-nvjitlink-cu12==12.6.85
-      - nvidia-nvtx-cu11==11.7.91
-      - nvidia-nvtx-cu12==12.1.105
       - oauthlib==3.2.2
       - openpyxl==3.1.5
       - opt-einsum==3.3.0
+      - packaging==25.0
       - pandas==2.0.3
       - parso==0.8.3
       - pexpect==4.8.0
       - pickleshare==0.7.5
       - pillow==10.0.1
+      - pip==25.0.1
+      - pip-tools==7.4.1
+      - pipdeptree==2.24.0
       - platformdirs==4.3.6
       - prompt-toolkit==3.0.41
       - protobuf==4.25.1
@@ -128,6 +75,7 @@ dependencies:
       - pydantic==2.10.4
       - pydantic-core==2.27.2
       - pygments==2.16.1
+      - pyproject-hooks==1.2.0
       - python-dateutil==2.8.2
       - pytz==2023.3.post1
       - pyyaml==6.0.1
@@ -140,25 +88,17 @@ dependencies:
       - sentry-sdk==2.19.2
       - setproctitle==1.3.4
       - six==1.16.0
-      - sklearn==0.0.post9
       - smmap==5.0.2
       - stack-data==0.6.3
       - sympy==1.12
-      - tensorboard==2.13.0
-      - tensorboard-data-server==0.7.2
-      - tensorflow==2.13.1
-      - tensorflow-estimator==2.13.0
-      - tensorflow-io-gcs-filesystem==0.34.0
       - termcolor==2.3.0
       - threadpoolctl==3.2.0
       - timm==0.9.7
-      - torch==2.4.1
+      - tomli==2.2.1
       - torchsampler==0.1.2
-      - torchvision==0.19.1
       - tqdm==4.66.1
       - traitlets==5.13.0
-      - triton==3.0.0
-      - typing-extensions==4.8.0
+      - typing-extensions==4.13.2
       - tzdata==2023.3
       - urllib3==2.0.5
       - wandb==0.19.1
@@ -166,4 +106,5 @@ dependencies:
       - werkzeug==3.0.1
       - wrapt==1.16.0
       - zipp==3.17.0
-
+      - tensorboard
+      - lion_pytorch
